--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ body {
     background-color: var(--main-blue);
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     color: var(--light-grey);
@@ -86,6 +86,9 @@ figcaption {
 }
 
 .app-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 10px;
     background-color: var(--dark-grey);
     width: auto;
@@ -108,15 +111,40 @@ a:visited {
 }
 
 .app-logo {
-    width: 150px;
+    width: 100px;
 }
 
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
     flex: 0 1 50px;
+    padding: 10px;
+    background-color: var(--dark-blue);
+}
+
+h4 {
+    margin: 10px;
+}
+
+.social-container {
+    margin-left: 50px;
+}
+
+.social-img {
+    height: 24px;
+    margin: 10px;
 }
 
 @media screen and (max-width: 700px) {
     .container {
+        flex-direction: column;
+    }
+    .social-container {
+        margin-left: 0px;
+    }
+    footer {
         flex-direction: column;
     }
 }
