--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,13 @@
 :root {
-    --light-grey: #D9D9D9;
+    --white: #FFFFFF;
+    --light-grey: #BFBFBF;
     --grey: #808080;
-    --dark-grey: #4d4d4d;
-    --darker-grey: #262626;
-    --darker-blue: #004080;
-    --dark-blue: #0066CC;
-    --main-blue: #0080FF;
-    --light-blue: #4DA6FF;
-    --green: #3DFF0D;
-    --red: #FF2819;
+    --dark-grey: #404040;
+    --black: #000000;
+    --main-blue: #0784B5;
+    --dark-theme-3: #414C50;
+    --dark-theme-2: #2D383C;
+    --dark-theme-1: #192428;
 }
 
 * {
@@ -25,13 +24,11 @@ body {
     flex-flow: column;
     height: 100%;
     font-family: 'Roboto', sans-serif;
-    background-color: var(--grey);
 }
 
 h1, h2, h3, h4 {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    color: var(--light-grey);
 }
 
 header {
@@ -39,7 +36,6 @@ header {
     justify-content: center;
     align-items: center;
     flex: 0 1 auto;
-    background-color: var(--darker-grey);
     padding: 10px;
 }
 
@@ -63,8 +59,7 @@ section {
     justify-content: baseline;
     flex: 30%;
     padding: 10px;
-    background-color: var(--dark-grey);
-    border-right: solid 1px var(--light-grey);
+    border-right: solid 1px;
 }
 
 .personal-photo {
@@ -76,7 +71,6 @@ section {
 figcaption {
     margin: 10px;
     text-align: center;
-    color: var(--light-grey);
 }
 
 .main {
@@ -86,7 +80,6 @@ figcaption {
     justify-content: baseline;
     flex: 70%;
     padding: 10px;
-    background-color: var(--dark-grey);
 }
 
 .outer-container {
@@ -100,14 +93,12 @@ figcaption {
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    background-color: var(--light-grey);
     width: auto;
     padding: 10px;
     margin: 10px;
 }
 
 h3 {
-    color: var(--main-blue);
     margin: 10px;
 }
 
@@ -131,7 +122,6 @@ footer {
     flex-direction: row;
     flex: 0 1 50px;
     padding: 10px;
-    background-color: var(--darker-grey);
 }
 
 h4 {
