Finish template header

--- a/apps/template/index.html
+++ b/apps/template/index.html
@@ -24,6 +24,7 @@
 
 <body>
     <header>
+        <a href="../../index.html" class="back-button svg"><img src="./images/back.svg" alt="Home"></a>
         <a href="#">
             <h1 style="display: none;">Gilvan Araújo</h1>
             <img src="./images/logo.svg" alt="Logo" class="logo svg">
