--- a/apps/template/styles/style.css
+++ b/apps/template/styles/style.css
@@ -38,6 +38,7 @@ h1, h2, h3, h4 {
 
 header {
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     flex: 0 1 auto;
@@ -45,8 +46,13 @@ header {
     background-color: var(--dark-theme-1);
 }
 
+.back-button{
+    position: absolute;
+    left: 10px;
+}
+
 .logo {
-    height: 75%;
+    height: 50px;
 }
 
 section {
