--- a/apps/template/index.html
+++ b/apps/template/index.html
@@ -32,11 +32,7 @@
     </header>
     <section class="container">
         <div class="sidebar">
-            <h2>About me</h2>
-            <img src="./images/profile.jpg" alt="Personal Photo" class="personal-photo">
-            <figcaption>
-                Brazilian, student and undergraduate in Computer Science by Universidade Estadual da Paraíba.
-            </figcaption>
+            <h2>About the app</h2>
         </div>
         <div class="main">
             <h2>Web Applications</h2>
