Finalize main section and media queries

--- a/apps/template/index.html
+++ b/apps/template/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <a href="../../index.html" class="back-button svg"><img src="./images/back.svg" alt="Home"></a>
-        <a href="#">
+        <a href="../../index.html">
             <h1 style="display: none;">Gilvan Araújo</h1>
             <img src="./images/logo.svg" alt="Logo" class="logo svg">
         </a>
@@ -35,15 +35,7 @@
             <h2>About the app</h2>
         </div>
         <div class="main">
-            <h2>Web Applications</h2>
-            <div class="outer-container">
-                <div class="app-container">
-                    <a href="#">
-                        <img src="favicon.svg" alt="App Logo" class="app-logo">
-                        <h3>Mock <br> application</h3>
-                    </a>
-                </div>
-            </div>
+            <h2>Application Area</h2>
         </div>
         </div>
     </section>
