Tweak CSS classes

--- a/apps/template/index.html
+++ b/apps/template/index.html
@@ -30,13 +30,12 @@
             <img src="./images/logo.svg" alt="Logo" class="logo svg">
         </a>
     </header>
-    <section class="container">
+    <section>
         <div class="sidebar">
             <h2>About the app</h2>
         </div>
         <div class="main">
             <h2>Application Area</h2>
-        </div>
         </div>
     </section>
     <footer>
