--- a/styles/style.css
+++ b/styles/style.css
@@ -1,78 +1,3 @@
-:root {
-    --white: #FFFFFF;
-    --light-grey: #BFBFBF;
-    --grey: #808080;
-    --dark-grey: #404040;
-    --black: #000000;
-    --light-theme-1: #CADEEF;
-    --light-theme-2: #9BD4E4;
-    --light-theme-3: #39ACE7;
-    --main-blue: #0784B5;
-    --dark-theme-3: #414C50;
-    --dark-theme-2: #2D383C;
-    --dark-theme-1: #192428;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
-body {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-    font-family: 'Roboto', sans-serif;
-    background-color: var(--dark-theme-1);
-}
-
-h1, h2, h3, h4 {
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-    color: var(--white);
-}
-
-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 0 1 auto;
-    padding: 10px;
-    background-color: var(--dark-theme-1);
-}
-
-.logo {
-    height: 50px;
-}
-
-section {
-    flex: 1 1 auto;
-    background-color: var(--dark-theme-2);
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.sidebar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: baseline;
-    flex: 30%;
-    padding: 10px;
-    border-right: solid 1px var(--grey);
-}
-
-h2 {
-    margin: 10px;
-}
-
 .personal-photo {
     width: 80%;
     border-radius: 50%;
@@ -83,15 +8,6 @@ figcaption {
     margin: 10px;
     text-align: center;
     color: var(--white);
-}
-
-.main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: baseline;
-    flex: 70%;
-    padding: 10px;
 }
 
 .outer-container {
@@ -117,27 +33,8 @@ h3 {
     margin: 10px;
 }
 
-a {
-    text-decoration: none;
-    text-align: center;
-}
-
-a:visited {
-    text-decoration: none;
-}
-
 .app-logo {
     width: 100px;
-}
-
-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex: 0 1 50px;
-    padding: 10px;
-    background-color: var(--dark-theme-1);
 }
 
 h4 {
@@ -153,47 +50,17 @@ h4 {
     margin: 10px;
 }
 
-.light-mode-button {
-    background-color: var(--dark-theme-3);
-    color: var(--white);
-    border: var(--black);
-    padding: 10px;
-    border-radius: 5px;
-    margin: 10px;
-}
-
-.light-mode-header-footer {
-    background-color: var(--light-theme-3);
-}
-
-.light-mode-main-sidebar {
-    background-color: var(--light-theme-2);
-}
-
-.light-mode-headers {
-    color: var(--black);
-}
-
 .light-mode-button-app-container {
     background-color: var(--light-theme-1);
-}
-
-.filter-black {
-    filter: brightness(0%);
 }
 
 @media screen and (max-width: 700px) {
     .container {
         flex-direction: column;
     }
-    .social-container {
-        margin: 0px;
-    }
-    footer {
-        flex-direction: column;
-    }
     .sidebar {
         border-right: none;
+        border-top: none;
         border-bottom: solid 1px var(--grey);
     }
 }
