Update global css

--- a/apps/template/index.html
+++ b/apps/template/index.html
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div>
-            <button class="light-mode-button" onclick="toggleVisualMode()">☀️</button>
+            <button class="visual-mode-button" onclick="toggleVisualMode()">☀️</button>
         </div>
     </footer>
     <script src="./scripts/script.js"></script>
