--- a/styles/global.css
+++ b/styles/global.css
@@ -123,7 +123,7 @@ h4 {
     margin: 10px;
 }
 
-.light-mode-button {
+.visual-mode-button {
     background-color: var(--dark-theme-3);
     color: var(--white);
     border: var(--black);
