--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ figcaption {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     border-radius: 10px;
     width: auto;
     padding: 10px;
