Update anchor links

--- a/apps/template/index.html
+++ b/apps/template/index.html
@@ -24,8 +24,8 @@
 
 <body>
     <header>
-        <a href="../../index.html" class="back-button svg"><img src="../../images/back.svg" alt="Home"></a>
-        <a href="../../index.html">
+        <a href="../../" class="back-button svg"><img src="../../images/back.svg" alt="Home"></a>
+        <a href="../../">
             <h1 style="display: none;">Gilvan Araújo</h1>
             <img src="../../images/logo.svg" alt="Logo" class="logo svg">
         </a>
