--- a/apps/memory-game/styles/style.css
+++ b/apps/memory-game/styles/style.css
@@ -72,3 +72,19 @@
     border-radius: 10px;
     margin-top: 20px;
 }
+
+@media screen and (min-width: 700px) {
+    #gameBoard {
+        grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;
+        gap: 25px;
+        padding: 20px;
+    }
+    .card {
+        width: 90px;
+        height: 90px;
+    }
+    .icon {
+        width: 80px;
+        height: 80px;
+    }
+}
